plugins {
    java
    id("io.quarkus")
}


val quarkusPlatformGroupId: String by project
val quarkusPlatformArtifactId: String by project
val quarkusPlatformVersion: String by project

dependencies {
    implementation(platform("org.javastro:bom:2026.1"))
    implementation("org.javastro.ivoa.core:tap")
    implementation("org.javastro.ivoa.core:dal")
    implementation("org.javastro.ivoa.core:pgsphere")
    //cannot include the demo when including the above because of classloader problems
//    implementation("org.javastro.ivoa.dm:DemoDM:0.1-SNAPSHOT")
//    implementation("org.javastro.ivoa.dm:DemoDM:0.1-SNAPSHOT:test")
    implementation(enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}"))
    implementation("io.quarkus:quarkus-rest-jaxb")
    implementation("io.quarkus:quarkus-kubernetes")
    implementation("io.quarkus:quarkus-rest-jsonb")
    implementation("io.quarkus:quarkus-smallrye-openapi")
//    implementation("io.quarkus:quarkus-reactive-pg-client")  // reactive client does not inject entitymanager
//    implementation("io.quarkus:quarkus-security-jpa-reactive")
    implementation("io.quarkus:quarkus-hibernate-orm")
    implementation("io.quarkus:quarkus-jdbc-postgresql")
    implementation("io.quarkus:quarkus-arc")
    implementation("io.quarkus:quarkus-rest")
    testImplementation("io.quarkus:quarkus-junit5")
    testImplementation("io.rest-assured:rest-assured")
    testImplementation("org.awaitility:awaitility:4.3.0")
}

group = "org.javastro.ivoa.servers"
version = "1.0.0-SNAPSHOT"

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType<Test> {
    systemProperty("java.util.logging.manager", "org.jboss.logmanager.LogManager")
}
tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
    options.compilerArgs.add("-parameters")

}

// should not be needed https://github.com/quarkusio/quarkus/discussions/40427 https://github.com/quarkusio/quarkus/issues/38996
tasks.named<JavaCompile>("compileJava") {
    dependsOn(tasks.named("compileQuarkusGeneratedSourcesJava"))
}

